--- a/Client/src/Components/Todo/style.module.css
+++ b/Client/src/Components/Todo/style.module.css
@@ -8,13 +8,22 @@
     background-color: #3d3d3d;
     border-radius: 50%;
 }
-.addTaskBtn {
-    background-color: #3d3d3d;
-    color: #fff;
+.btn {
     font-size: 0.75rem;
     padding: 5px 10px;
     border: 1px solid transparent;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 1.5rem;
+}
+.addTaskBtn {
+    background-color: #3d3d3d;
+    color: #fff;
+}
+.addTaskBtn:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+.cancelBtn:disabled {
+    opacity: 0.8;
+    cursor: not-allowed;
 }
