--- a/Client/src/Components/Tasks/style.module.css
+++ b/Client/src/Components/Tasks/style.module.css
@@ -33,3 +33,25 @@
     opacity: 0.8;
     cursor: not-allowed;
 }
+.deleteTaskBtn {
+    background-color: rgba(158, 16, 16, 0.9);
+    color: #fff;
+}
+.deleteTaskBtn:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+.deleteTaskBtn:hover {
+    background-color: rgba(119, 30, 30, 1);
+}
+.updateTaskBtn {
+    background-color: rgba(23, 158, 23, 0.8);
+    color: #fff;
+}
+.updateTaskBtn:hover {
+    background-color: rgba(23, 158, 23, 1);
+}
+.updateTaskBtn:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+}
